[gd_scene load_steps=4 format=3 uid="uid://bp31r5gqoqgre"]

[ext_resource type="Script" uid="uid://dywj5dn4esagv" path="res://scenes/classes/class_presentation.gd" id="1_3uusj"]
[ext_resource type="Texture2D" uid="uid://gv0ojeer8hfx" path="res://assets/classes/lunar_witch.png" id="1_sr0tj"]
[ext_resource type="Texture2D" uid="uid://ogifjtewnoxb" path="res://assets/classes/background.png" id="2_gpjbw"]

[node name="ClassPresentation" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_left = 281.0
offset_top = 137.0
offset_right = 911.14404
offset_bottom = 507.00803
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3uusj")

[node name="ClassImageSprite" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(165, 166.00003)
scale = Vector2(0.29417476, 0.29417476)
texture = ExtResource("1_sr0tj")

[node name="ClassDescriptionLabel" type="Label" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = -0.446
anchor_top = -0.37
anchor_right = -0.446
anchor_bottom = -0.37
offset_left = 528.04425
offset_top = 238.90295
offset_right = 768.0443
offset_bottom = 389.90295
grow_horizontal = 2
grow_vertical = 2
text = "teste"

[node name="Background" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(310, 182)
texture = ExtResource("2_gpjbw")
